Remove uses of deprecated APIs